front page description overflow fixes

--- a/public/css/clean-blog.css
+++ b/public/css/clean-blog.css
@@ -284,6 +284,9 @@ header.masthead .post-heading .meta a {
 
 .post-preview > a > .post-subtitle {
   font-weight: 300;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   margin: 0 0 10px;
 }
 
